# DPToie-Python

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Noie.ipynb  README-ptbr.md  README.md  docker-compose.yml  pyproject.toml  regras.md
.github/workflows/: build.yml  extrai_fatos.yml  python-publish.yml  run_main.yml
docs/: regras.md
inputs/: bia.conll  bia.txt  ceten-200.conll  teste.conll  teste.txt  wiki-200.conll
src/: extraction.py  main.py  noie.py
src/dptoie/: main.py
src/dptoie_python/: main.py
src/extraction/: extraction.py  subject.py
