[tool.poetry]
name = "ptoie_dep"
version = "0.1.0"
description = "PTOIE-Dep is an Open Information Extractor for Portuguese language that employs Dependence Parser and Part of Speech Tagger models with Stanford CoreNLP."
authors = ["Rafael Glauber <rafaelglauber@gmail.com>", "Daniela Barreiro Claro <dclaro.@ufba.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spacy_stanza = "1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
